--- a/sfg-pet-clinic-web/pom.xml
+++ b/sfg-pet-clinic-web/pom.xml
@@ -8,6 +8,12 @@
 		<version>0.0.1-SNAPSHOT</version>
 	</parent>
 	<artifactId>sfg-pet-clinic-web</artifactId>
+	<properties>
+		<!-- Web dependencies -->
+		<webjars-bootstrap.version>5.2.3</webjars-bootstrap.version>
+		<webjars-font-awesome.version>4.7.0</webjars-font-awesome.version>
+		<libsass.version>0.2.29</libsass.version>
+	</properties>
 	<dependencies>
 		<dependency>
 			<groupId>com.sfg</groupId>
@@ -37,6 +43,18 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+		<!-- webjars -->
+		<dependency>
+			<groupId>org.webjars.npm</groupId>
+			<artifactId>bootstrap</artifactId>
+			<version>${webjars-bootstrap.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.webjars.npm</groupId>
+			<artifactId>font-awesome</artifactId>
+			<version>${webjars-font-awesome.version}</version>
+		</dependency>
+		<!-- end of webjars -->
 	</dependencies>
 	<build>
 		<plugins>
@@ -51,6 +69,51 @@
 						</exclude>
 					</excludes>
 				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>com.gitlab.haynes</groupId>
+				<artifactId>libsass-maven-plugin</artifactId>
+				<version>${libsass.version}</version>
+				<executions>
+					<execution>
+						<phase>generate-resources</phase>
+						<?m2e execute onConfiguration,onIncremental?>
+						<goals>
+							<goal>compile</goal>
+						</goals>
+					</execution>
+				</executions>
+				<configuration>
+					<inputPath>${basedir}/src/main/scss/</inputPath>
+					<outputPath>
+						${basedir}/src/main/resources/static/resources/css/</outputPath>
+					<includePath>
+						${project.build.directory}/webjars/META-INF/resources/webjars/bootstrap/${webjars-bootstrap.version}/scss/</includePath>
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-dependency-plugin</artifactId>
+				<executions>
+					<execution>
+						<id>unpack</id>
+						<?m2e execute onConfiguration,onIncremental?>
+						<phase>generate-resources</phase>
+						<goals>
+							<goal>unpack</goal>
+						</goals>
+						<configuration>
+							<artifactItems>
+								<artifactItem>
+									<groupId>org.webjars.npm</groupId>
+									<artifactId>bootstrap</artifactId>
+									<version>${webjars-bootstrap.version}</version>
+								</artifactItem>
+							</artifactItems>
+							<outputDirectory>${project.build.directory}/webjars</outputDirectory>
+						</configuration>
+					</execution>
+				</executions>
 			</plugin>
 		</plugins>
 	</build>
