added i18n properties. Closes #24

--- a/sfg-pet-clinic-web/src/main/resources/application.properties
+++ b/sfg-pet-clinic-web/src/main/resources/application.properties
@@ -1,2 +1,5 @@
 # support for banner image is removed
 #spring.banner.image.location=bannerImage.jpg
+
+# Internationalization
+spring.messages.basename=messages/messages
