--- a/sfg-pet-clinic-web/src/main/resources/application.properties
+++ b/sfg-pet-clinic-web/src/main/resources/application.properties
@@ -3,3 +3,7 @@
 
 # Internationalization
 spring.messages.basename=messages/messages
+
+spring.profiles.active=springDataJpa
+
+spring.datasource.url=jdbc:h2:mem:testdb
